fix: gallery popup overlapping

--- a/assets/frontend.css
+++ b/assets/frontend.css
@@ -184,16 +184,25 @@ span.mpc-total {
 }
 /* The Modal (background) */
 .mpc-popup {
-	transition: 0.3s;
-	display: none;
-	position: fixed;
-	top: 0;
-	right: 0;
-	width: 100%;
-	height: 100%;
-	background: #000000e8;
-	text-align: center;
-	z-index: 999999;
+    transition: 0.3s;
+    display: none;
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: #000000e8;
+    text-align: center;
+    z-index: 999999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+	flex-direction: column;
+}
+.mpc-popup  .image-wrap {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .admin-bar .mpc-popup {
 	top: 32px;
@@ -450,11 +459,6 @@ table.mpc-wrap tbody tr td {
 	margin-right: 10px;
 }
 #mpcpop .mpc-gallery {
-	position: fixed;
-    left: 50%;
-    bottom: -20px;
-    transform: translate(-50%, -50%);
-    margin: 0 auto;
 }
 .mpc-gallery img.mpcgi-selected {
 	border: 4px solid #2199c5;
